--- a/templates/base-admin.html.twig
+++ b/templates/base-admin.html.twig
@@ -243,12 +243,12 @@
                                     </li>
                                 </ul>
                             </li>
-                            {# Gestion des petits éclaireurs #}
+                            {# Gestion de la FAQ #}
                             <li class="nav-item has-treeview">
                                 <a href="#" class="nav-link">
                                     <i class="nav-icon fas fa-question-circle"></i>
                                     <p>
-                                        FAQs
+                                        Gestion FAQs
                                         <i class="fas fa-angle-left right"></i>
                                     </p>
                                 </a>
@@ -267,7 +267,30 @@
                                     </li>
                                 </ul>
                             </li>
-
+                            {# Gestion des liens #}
+                            <li class="nav-item has-treeview">
+                                <a href="#" class="nav-link">
+                                    <i class="nav-icon fas fa-link"></i>
+                                    <p>
+                                        Gestion des liens
+                                        <i class="fas fa-angle-left right"></i>
+                                    </p>
+                                </a>
+                                <ul class="nav nav-treeview">
+                                    <li class="nav-item">
+                                        <a href="{{ path('links_index') }}" class="nav-link">
+                                            <i class="far fa-circle nav-icon"></i>
+                                            <p>Liste des liens</p>
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="{{ path('links_new') }}" class="nav-link">
+                                            <i class="far fa-circle nav-icon"></i>
+                                            <p>Nouveau lien</p>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
                         </ul>
                     </nav>
                     <!-- /.sidebar-menu -->
