Vitrine : Pagination, mots clés

--- a/templates/home/allProducts.html.twig
+++ b/templates/home/allProducts.html.twig
@@ -4,6 +4,7 @@
 
 {% block body %}
 
+	{# Arborescence #}
 	<ul>
 		<li>
 			<a href="{{ path('home') }}" title="Ludo et Sophie : Acceuil">
@@ -16,23 +17,43 @@
 			</a>
 		</li>
 	</ul>
+	{# Fin Arborescence #}
 
+	{# Boucle sur tous les Produits #}
 	{% if products|length > 0 %}
 		<section class="border-top">
+
+			<div>
+				{{ knp_pagination_render(products) }}
+			</div>
+
 			{% for product in products %}
                 <article class="border my-3">
                     <div class="d-flex">
+
+						{# Image du produit #}
                         <div class="p-3">
                         {% if product.images is not empty %}
                             <img src="{{ asset('images/products/' ~ product.images[0].name )| imagine_filter('miniatures') }}" alt="Immage d'illustration {{ product.title ?? '' }}">      
                         {% endif %}                 
                         </div>
+						{# Fin Image du produit #}
+
+						{# Description du produit #}
                         <div class="p-3">
                             <h3>{{ product.title }}</h3>
-                            <p>{{ product.description[:400]|raw }}{{ (product.description|length > 400)?'...':'' }}</p>
+                            <p>{{ product.description[:400]|striptags|raw }}{{ (product.description|length > 400)?'...':'' }}</p>
+							<p>
+								{% for keyWords in product.keywords %}
+								# <strong>{{ keyWords }}</strong>
+								{% endfor %}						
+							</p>
                             <p>{{ product.taxIncludedPrice }}&euro;</p>
-                        </div>            
+                        </div>     
+						{# Fin Description du produit #}       
                     </div>
+
+					{# Liens vers produits #}
 					{% if product.weezeevent is not empty %}
 					<p class="border p-3 m-0">
 						<a class="btn" href="{{ product.weezeevent }}" title="Réserver sur weezevent.com" target="_blank" rel="noopener noreferrer">Réserver sur weezevent.com</a>
@@ -41,10 +62,17 @@
                     <p class="border-top border-left p-3 m-0">
                         <a class="text-decoration-none" title="Aller à la page de {{ product.title }}" href="{{ path('home_product', { slugCategory: '/' , slugProduct: product.slug}) }}">En savoir plus...</a>    
                     </p>
+					{# Fin Liens vers produits #}
                 </article>
 
 			{% endfor %}
+
+			<div>
+				{{ knp_pagination_render(products) }}
+			</div>
+
 		</section>
 	{% endif %}
+	{# Fin boucle sur tous les Produits #}
         
 {% endblock %}
