--- a/templates/home/product.html.twig
+++ b/templates/home/product.html.twig
@@ -67,6 +67,12 @@
 				<div class="tab-content mt-3">
 					<section class="tab-pane active" id="tab-description">
 						<p>{{ ( product.description ?? '')|raw }}</p>
+						<p>
+							{% for keyWords in product.keywords %}
+							# <strong>{{ keyWords }}</strong>
+							{% endfor %}						
+						</p>
+						<p>{{ product.taxIncludedPrice }}&euro;</p>
 					</section>
 					<section class="tab-pane" id="tab-specification">
 						<table class="table table-bordered">
@@ -135,27 +141,36 @@
 	</article>
 
 	{% if category.products|length > 1 %}
-		<section class="row">
-		{% for suggestedProduct in category.products %}
-			{% if suggestedProduct != product %}
-				<article class="border p-0 m-3 col-3">
-					<div class="p-3">
-					{% if suggestedProduct.images is not empty %}
-						<img class="w-100" src="{{ asset('images/products/' ~ suggestedProduct.images[0].name )| imagine_filter('miniatures') }}" alt="Immage d'illustration {{ suggestedProduct.title ?? '' }}">      
-					{% endif %}                 
-					</div>
-					<div class="p-3">
-						<h3 class="font-italic">{{ suggestedProduct.title }}</h3>
-						<p>{{ suggestedProduct.description[:200] }}{{ (suggestedProduct.description|length > 200)?'...':'' }}</p>
-						<p>{{ suggestedProduct.taxIncludedPrice }}&euro;</p>
-					</div>            
-					<p class="border-top p-3 my-0 text-center">
-						<a class="text-decoration-none" title="Aller à la page de {{ suggestedProduct.title }}" href="{{ path('home_product', { slugCategory:category.slug, slugProduct: suggestedProduct.slug}) }}">En savoir plus...</a>              
-					</p>
-				</article>
-			{% endif %}
-		{% endfor %}
-		</section>
+	<section>
+		<h3>Sortie(s) similaire(s)</h3>
+		<div class="row">
+			{% for suggestedProduct in category.products %}
+				{% if suggestedProduct != product %}
+					<article class="border p-0 m-3 col-3">
+						<div class="p-3">
+						{% if suggestedProduct.images is not empty %}
+							<img class="w-100" src="{{ asset('images/products/' ~ suggestedProduct.images[0].name )| imagine_filter('miniatures') }}" alt="Immage d'illustration {{ suggestedProduct.title ?? '' }}">      
+						{% endif %}                 
+						</div>
+						<div class="p-3">
+							<h4 class="font-italic">{{ suggestedProduct.title }}</h4>
+							<p>{{ suggestedProduct.description[:200] }}{{ (suggestedProduct.description|length > 200)?'...':'' }}</p>
+							<p>
+								{% for keyWords in product.keywords %}
+								# <strong>{{ keyWords }}</strong>
+								{% endfor %}						
+							</p>
+							<p>{{ suggestedProduct.taxIncludedPrice }}&euro;</p>
+						</div>            
+						<p class="border-top p-3 my-0 text-center">
+							<a class="text-decoration-none" title="Aller à la page de {{ suggestedProduct.title }}" href="{{ path('home_product', { slugCategory:category.slug, slugProduct: suggestedProduct.slug}) }}">En savoir plus...</a>              
+						</p>
+					</article>
+				{% endif %}
+			{% endfor %}
+		</div>	
+	</section>
+
 	{% endif %}
 
 {% endblock %}
