--- a/templates/links/index.html.twig
+++ b/templates/links/index.html.twig
@@ -56,7 +56,7 @@
                         {{ knp_pagination_sortable(links, 'Titre', 'title') }}                   
                     </th>
                     <th>
-                        {{ knp_pagination_sortable(links, 'Contenu', 'content') }}       
+                        {{ knp_pagination_sortable(links, 'Type', 'type') }}       
                     </th>
                     <th>actions</th>
                 </tr>
@@ -67,7 +67,7 @@
                     <td>{{ link.url }}</td>
                     <td>{{ link.position }}</td>
                     <td>{{ link.title }}</td>
-                    <td>{{ link.content|raw }}</td>
+                    <td>{{ link.type }}</td>
                     <td>
                     	<a href="{{ path('links_show', {'id': link.id}) }}" class="btn btn-primary" ><i class="fas fa-glasses"></i></a>
 						<a href="{{ path('links_edit', {'id': link.id}) }}" class="btn btn-warning" ><i class="fas fa-edit"></i></a>
