--- a/templates/links/index.html.twig
+++ b/templates/links/index.html.twig
@@ -47,27 +47,27 @@
             <thead>
                 <tr>
                     <th>
-                        {{ knp_pagination_sortable(links, 'Url', 'url') }}
-                    </th>
-                    <th>
-                        {{ knp_pagination_sortable(links, 'Position', 'position') }}
-                    </th>
-                    <th>
                         {{ knp_pagination_sortable(links, 'Titre', 'title') }}                   
                     </th>
                     <th>
                         {{ knp_pagination_sortable(links, 'Type', 'type') }}       
                     </th>
+					<th>
+                        {{ knp_pagination_sortable(links, 'Position', 'position') }}
+                    </th>
+                    <th>
+						{{ knp_pagination_sortable(links, 'Ordre d\'apparition', 'positionOrder') }}
+					</th>
                     <th>actions</th>
                 </tr>
             </thead>
             <tbody>
             {% for link in links %}
                 <tr>
-                    <td>{{ link.url }}</td>
-                    <td>{{ link.position }}</td>
-                    <td>{{ link.title }}</td>
+				    <td>{{ link.title }}</td>
                     <td>{{ link.type }}</td>
+                    <td>{{ link.position }}</td>
+					<td>{{ link.positionOrder }}</td>
                     <td>
                     	<a href="{{ path('links_show', {'id': link.id}) }}" class="btn btn-primary" ><i class="fas fa-glasses"></i></a>
 						<a href="{{ path('links_edit', {'id': link.id}) }}" class="btn btn-warning" ><i class="fas fa-edit"></i></a>
