--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
+        <link rel="stylesheet" href="{{ asset('css/styles.css') }}">
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
@@ -30,16 +30,18 @@
             <div class="container">
                 <div class="row">
                     <div class="col-2">
-                        {% for link in links()|sort((a, b) => a.positionOrder <=> b.positionOrder) %}
-                            {% if link.position == 'header' %}
-                                <a href="{{ link.url }}" title="{{ link.title }}">
+                        {# Boucle sur liens header #}
+                        {% for link in links()|filter( link => link.position == 'header' )|sort((a, b) => a.positionOrder <=> b.positionOrder) %}
+                                <a href="{{ link.url }}" 
+                                title="{{ link.title }}"
+                                target="{{ (link.type == "external") ? '_blank' : '_self' }}">
                                     {% if link.image is not null %}
 					                    <img src="{{ asset('images/icones/'~ link.image ) | imagine_filter('miniatures') }}" alt="Icone du lien {{ link.title }}">
 						            {% endif %}
                                     <p class="m-0 p-0">{{ link.content }}</p>
                                 </a>
-                            {% endif %}
                         {% endfor %}
+                        {# Fin Boucle sur liens header #}
 
                     </div>
                     <div class="col-8">
@@ -62,47 +64,53 @@
                     <div class="">
                         <ul class="nav navbar-nav">
 
-                            {% for link in links()|sort((a, b) => a.positionOrder <=> b.positionOrder) %}
-                                {% if link.position == 'nav' %}
-                                    {% if link.type == "external" %}
-                                        <a href="{{ link.url }}" title="{{ link.title }}" target="_blank" rel="noopener noreferrer">{{ link.content }} </a> 
-                                    {% else %}
-                                        <a href="{{ link.url }}" title="{{ link.title }}">{{ link.content }}</a>                               
-                                    {% endif %}
-                                {% endif %}
-                            {% endfor %}
+                            {% set dropDownButtonText = ''  %}
 
-                            <li>
-                                <a class="mobile_fix hidden-xs">Mais encore...</a>
-                            </li>
+                            {# Boucle sur liens nav #}
+                            {% for link in links()|filter( link => link.position == 'nav' )|sort((a, b) => a.positionOrder <=> b.positionOrder) %}
+                                    <a class="mobile_fix {{ loop.last ? 'hidden-xs' : '' }}" 
+                                    href="{{ link.url }}" 
+                                    title="{{ link.title }}" 
+                                    target="{{ (link.type == "external") ? '_blank' : '_self' }}" >
+                                        {{ link.content }}
+                                    </a> 
+                                    
+                                    {% if loop.last %}
+                                        {% set dropDownButtonText = link.content  %}
+                                    {% endif %}
+
+                            {% endfor %}
+                            {# Fin Boucle sur liens nav #}
+ 
                             <li id="***REMOVED***" class="dropdown hidden-lg">
                                 <a id="***REMOVED***_link" href="#" title="Programmation" class="dropdown-toggle" data-toggle="dropdown">
-                                    <span class="first_lvl">Mais encore...</span> <span class="caret"></span>
+                                    <span class="first_lvl">{{ dropDownButtonText }}</span> 
+                                    <span class="caret"></span>
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-right">
 
                                     {% for link in links()|sort((a, b) => a.positionOrder <=> b.positionOrder) %}
                                         {% if link.position == 'dropdown' %}
                                         <li>
-                                            {% if link.type == "external" %}
-                                                <a href="{{ link.url }}" title="{{ link.title }}" target="_blank" rel="noopener noreferrer">{{ link.content }} </a> 
-                                            {% else %}
-                                                <a href="{{ link.url }}" title="{{ link.title }}">{{ link.content }}</a>                               
-                                            {% endif %}
+                                            <a class="mobile_fix" 
+                                            href="{{ link.url }}" 
+                                            title="{{ link.title }}" 
+                                            target="{{ (link.type == "external") ? '_blank' : '_self' }}" >
+                                                {{ link.content }}
+                                            </a> 
                                         </li>
                                         {% endif %}
                                     {% endfor %}
                                 </ul>
                             </li>
                             <li class="hidden-lg">
-                                {% for link in links()|sort((a, b) => a.positionOrder <=> b.positionOrder) %}
-                                    {% if link.position == 'header' %}
-                                        {% if link.type == "external" %}
-                                            <a href="{{ link.url }}" title="{{ link.title }}" target="_blank" rel="noopener noreferrer">{{ link.content }} </a> 
-                                        {% else %}
-                                            <a href="{{ link.url }}" title="{{ link.title }}">{{ link.content }}</a>                               
-                                        {% endif %}
-                                    {% endif %}
+                                {% for link in links()|filter( link => link.position == 'header' )|sort((a, b) => a.positionOrder <=> b.positionOrder) %}
+                                        <a class="mobile_fix" 
+                                        href="{{ link.url }}" 
+                                        title="{{ link.title }}" 
+                                        target="{{ (link.type == "external") ? '_blank' : '_self' }}" >
+                                            {{ link.content }}
+                                        </a> 
                                 {% endfor %}
                             </li>
                         </ul>
@@ -146,18 +154,18 @@
                 </div>
 
                 <ul>
-                    {% for link in links()|sort((a, b) => a.positionOrder <=> b.positionOrder) %}
-                        {% if link.position == 'footer' %}
+                    {# Boucle sur liens footer #}
+                    {% for link in links()|filter( link => link.position == 'footer' )|sort((a, b) => a.positionOrder <=> b.positionOrder) %}
                             <li>
-                                {% if link.type == "external" %}
-                                    <a href="{{ link.url }}" title="{{ link.title }}" target="_blank" rel="noopener noreferrer">{{ link.content }} </a> 
-                                {% else %}
-                                    <a href="{{ link.url }}" title="{{ link.title }}">{{ link.content }}</a>                               
-                                {% endif %}
+                                <a class="mobile_fix" 
+                                href="{{ link.url }}" 
+                                title="{{ link.title }}" 
+                                target="{{ (link.type == "external") ? '_blank' : '_self' }}" >
+                                    {{ link.content }}
+                                </a> 
                             </li>
-                        {% endif %}
                     {% endfor %}
-
+                    {# Fin Boucle sur liens footer #}
                 </ul>
 
             
@@ -171,6 +179,8 @@
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+        <script src="{{ asset('js/gridList.js') }}"></script>
+
         {% block javascripts %}{% endblock %}
     </body>
 </html>
