--- a/templates/home/category.html.twig
+++ b/templates/home/category.html.twig
@@ -24,6 +24,23 @@
 	</ul>
 	{# Fin Arborescence des filtres catégories #}
 
+	{# Boutons grille/liste #}
+	<div class="row">
+        <div class="col-lg-12 my-3">
+            <div class="pull-right">
+                <div class="btn-group">
+					<button type="button" class="btn btn-light border" id="list" data-toggle="tooltip" data-placement="top" title="List">
+						<i class="fa fa-th-list"></i>
+					</button>
+					<button type="button" class="btn btn-light border" id="grid" data-toggle="tooltip" data-placement="top" title="Grid">
+						<i class="fa fa-th"></i>
+					</button>
+                </div>
+            </div>
+        </div>
+    </div> 
+	{# Fin Boutons grille/liste #}
+
 	{# Présentation catégorie #}
 	<article>
 		{# <h2>{{ category.title ?? '' }}</h2> #}
@@ -76,51 +93,56 @@
 				{{ knp_pagination_render(products) }}
 			</div>
 
+			<div id="products" class="row view-group">
+
 			{# Boucle sur produits #}
 			{% for product in products %}
-                <article class="border my-3">
+				<article class="item col-xs-3 col-lg-3">
+					<div class="thumbnail card">
+						<div class="img-event p-3">
+							{# Illustration produit #}
+							{% if product.images is not empty %}
+								<img class="group list-group-image img-fluid w-100" src="{{ asset('images/products/' ~ product.images[0].name )| imagine_filter('miniatures') }}" alt="Immage d'illustration {{ product.title ?? '' }}">      
+							{% endif %}    
+							{# Fin Illustration produit #}
+						</div>
 
-                    <div class="d-flex">
-						{# Illustration produit #}
-                        <div class="p-3">
-                        {% if product.images is not empty %}
-                            <img src="{{ asset('images/products/' ~ product.images[0].name )| imagine_filter('miniatures') }}" alt="Immage d'illustration {{ product.title ?? '' }}">      
-                        {% endif %}                 
-                        </div>
-						{# Fin Illustration produit #}
-
-						{# Description produit #}
-                        <div class="p-3">
-                            <h3>{{ product.title }}</h3>
-                            <p>{{ product.description[:400]|striptags|raw }}{{ (product.description|length > 400)?'...':'' }}</p>
+						<div class="caption card-body">
+							{# Description produit #}
+							<h3 class="group card-title inner list-group-item-heading">
+								{{ product.title }}
+							</h3>
+							<p class="group inner list-group-item-text">
+								{{ product.description[:400]|striptags|raw }}{{ (product.description|length > 400)?'...':'' }}
+							</p>
 							<p>
 								{% for keyWords in product.keywords %}
 								# <strong>{{ keyWords }}</strong>
 								{% endfor %}						
 							</p>
-                            <p>{{ product.taxIncludedPrice }}&euro;</p>
-                        </div>
-						{# Fin Description produit #}  
-
-                    </div>
-
-					{# Liens vers produit #}
-					{% if product.weezeevent is not empty %}
-					<p class="border p-3 m-0">
-						<a class="btn" href="{{ product.weezeevent }}" title="Réserver sur weezevent.com" target="_blank" rel="noopener noreferrer">Réserver sur weezevent.com</a>
-					</p>
-					{% endif %}
-                    <p class="border-top border-left p-3 m-0">
-                        <a class="text-decoration-none" title="Aller à la page de {{ product.title }}" href="{{ path('home_product', { slugCategory: topCategoryTitlesAndSlugs|last.categorySlug, slugProduct: product.slug}) }}">En savoir plus...</a>    
-                    </p>
-					{# Fin Liens vers produit #}
-
-					
-                </article>
-
+							{# Fin Description produit #}  
+							<div class="row">
+								<div class="col-xs-12 col-md-6">
+									<p class="lead">
+										{{ product.taxIncludedPrice }}&euro;
+									</p>
+								</div>
+								<div class="col-xs-12 col-md-6">
+									{# Liens vers produit #}
+									{% if product.weezeevent is not empty %}
+										<a class="btn" href="{{ product.weezeevent }}" title="Réserver sur weezevent.com" target="_blank" rel="noopener noreferrer">Réserver sur weezevent.com</a>
+									{% endif %}
+										<a class="text-decoration-none" title="Aller à la page de {{ product.title }}" href="{{ path('home_product', { slugCategory: topCategoryTitlesAndSlugs|last.categorySlug, slugProduct: product.slug}) }}">En savoir plus...</a>    
+									{# Fin Liens vers produit #}
+								</div>
+							</div>
+						</div>
+					</div>
+				</article>
 			{% endfor %}
 			{# Fin Boucle sur produits #}
 
+			</div>
 			<div>
 				{{ knp_pagination_render(products) }}
 			</div>
